# UCSP-CompGraph

./: .gitignore  CMakeLists.txt  README.md  basicTriangle.cpp  example.cpp  glad.c  lab1.cpp
examples/: basicExample.cpp
glad/: glad.h
shaders/: fshader.glsl  lab1_f.glsl  lab1_v.glsl  lab2_inv_f.glsl  lab2_one_color_f.glsl  lab2_one_color_v.glsl  minimal_v.glsl  objLoad_v.glsl  vshader.glsl
src/: crane.cpp  example.cpp  lab1.cpp  lab2.cpp  lab2_1.cpp  lab3.cpp  lab3_1.cpp  lab4.cpp  lightsExample.cpp  objLoad.cpp
src/helpers/: camera.cpp  camera.hpp  imgDummy.cpp  object.hpp  objloader.hpp  shader.hpp  texture.cpp  texture.hpp
src/lab5/: fileReader.hpp  lab5.cpp
template/: CMakeLists.txt  README.md
template/helpers/: shader.hpp
template/shaders/: vshader.glsl
textures/: fontvieille_1.tga
